--- a/example/index.html
+++ b/example/index.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Virtual Sortable Example</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.ts"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Virtual Sortable Example</title>
+        <style>
+            .ghost-class {
+                height: 48px;
+                border: 1px solid #2ec1cc !important;
+                .content {
+                    display: none;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/main.ts"></script>
+    </body>
 </html>
