--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,10 @@
           display: none;
         }
       }
+      * {
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
